...
  "chevR": [{"t":"path","d":"m9 6 6 6-6 6"}],
  "chevD": [{"t":"path","d":"m6 9 6 6 6-6"}],
  "gear": [{"t":"circle","cx":12,"cy":12,"r":3},{"t":"path","d":"M19.4 15a1.7 1.7 0 0 0 .3 1.8l.1.1a2 2 0 1 1-2.8 2.8l-.1-.1a1.7 1.7 0 0 0-1.8-.3 1.7 1.7 0 0 0-1 1.5V21a2 2 0 1 1-4 0v-.1a1.7 1.7 0 0 0-1.1-1.5 1.7 1.7 0 0 0-1.8.3l-.1.1a2 2 0 1 1-2.8-2.8l.1-.1a1.7 1.7 0 0 0 .3-1.8 1.7 1.7 0 0 0-1.5-1H3a2 2 0 1 1 0-4h.1a1.7 1.7 0 0 0 1.5-1.1 1.7 1.7 0 0 0-.3-1.8l-.1-.1a2 2 0 1 1 2.8-2.8l.1.1a1.7 1.7 
  "user": [{"t":"circle","cx":12,"cy":8.5,"r":3.6},{"t":"path","d":"M4.8 20a7.2 7.2 0 0 1 14.4 0"}],
  "send": [{"t":"path","d":"M22 2 11 13M22 2l-7 20-4-9-9-4 20-7Z"}],
  "close": [{"t":"path","d":"m6 6 12 12M18 6 6 18"}],
  "search": [{"t":"circle","cx":10.5,"cy":10.5,"r":6.5},{"t":"path","d":"m15.5 15.5 4 4"}],
  "lock": [{"t":"rect","x":4,"y":10.5,"w":16,"h":10,"rx":2},{"t":"path","d":"M8 10.5V7a4 4 0 0 1 8 0v3.5"}],
  "warn": [{"t":"path","d":"M12 3.5 21.5 20h-19L12 3.5Z"},{"t":"path","d":"M12 10v4.2M12 17.2v.1"}],
  "sparkle": [{"t":"path","d":"M12 3l1.8 5.2L19 10l-5.2 1.8L12 17l-1.8-5.2L5 10l5.2-1.8L12 3Z"},{"t":"path","d":"M18.5 16.5l.7 2 2 .7-2 .7-.7 2-.7-2-2-.7 2-.7.7-2Z"}],
  "chat": [{"t":"path","d":"M21 12.5c0 4.1-4 7.5-9 7.5-1.1 0-2.2-.16-3.2-.46L3.5 21l1.4-3.6C3.7 16 3 14.3 3 12.5 3 8.4 7 5 12 5s9 3.4 9 7.5Z"}],
};

